Games/Simple clicker/styles.css
:root {
	--white: #FCFCFF;
  --very-light-grey: #EBEBF0;
  --light-grey: #DFDFE5;
  --grey: #71717A;
  --very-light-black: #67677A;
  --light-black: #454552;
  --black: #33333D;
  --dark-black: #020203;

  --page-background: var(--white);
	--section-background: var(--very-light-grey);
	--nested-section-background: var(--light-grey);
	--button-background: var(--black);
	--button-background-hover: var(--light-black);
	--button-background-active: var(--dark-black);
	--button-background-loading: var(--very-light-black);
	--secondary-text: var(--grey);
	--primary-text: var(--black);
	--inverse-text: var(--white);


  font-family: Inter, sans-serif;
  font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
}

@supports(font-variation-settings: normal) {
  :root { font-family: InterVariable, sans-serif; }
}

* {
  touch-action: manipulation;
  border-radius: 2px;
}

body {
	font-family: 'Inter', sans-serif;
	color: var(--primary-text);
	-webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.game-area {
	width: 496px;
	margin-left: auto;
	margin-right: auto;
	margin-top: 80px;
}

#stats-bar {
	display: flex;
	justify-content: space-between;
	align-items: center;
}


.stat {
	display: inline-block;
	background-color: var(--section-background);
	padding: 8px 9px 8px 8px;
}

.stat.score {
	display: inline-block;
	background-color: var(--page-background);
	padding: 8px 9px 8px 8px;
	margin-top: 24px;
}

.stat .name {
	color: #71717A;
}

.stat .value {
	font-weight: 500;
}

#stats-bar .last-item {
	margin-left: 4px;
}

#number-area {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	height: 328px;
	margin-top: 8px;
	background-color: var(--section-background);
}

#big-number {
	font-size: 96px;
	font-weight: 700;
}

#big-button {
	width: 100%;
	margin-top: 10px;
	cursor: pointer;
	height: 80px;
	background-color: var(--button-background);
	color: var(--inverse-text);
	border: none;
	font-size: 20px;
	font-weight: 500;
}

#big-button:hover {
  background-color: var(--button-background-hover);
}

#big-button:active {
  background-color: var(--button-background-active);
}

.shop-option {
	display: flex;
	margin-top: 8px;
	height: 134px;
}

.shop-item {
	background-color: var(--section-background);
	width: 316px;
	display: flex;
	align-items: center;
	padding-left:20px;
	padding-right:24px;
}

.item-effect {
	font-size: 48px;
	font-weight: 700;
}

.special-item {
	display:flex;
	justify-content: space-between;
	align-items: center;
	width: 100%;
}

.item-tradeoff {
	margin-top: 2px;
}

.item-tradeoff .stat {
	background-color: var(--nested-section-background);
}

.select-option {
	margin-left: 8px;
	width: 172px;
	background-color: var(--button-background);
	color: var(--inverse-text);
	font-size: 20px;
	font-weight: 500;
	cursor: pointer;
	border: none;
}

.select-option:hover {
  background-color: var(--button-background-hover);
}

.select-option:active {
  /*background-color: var(--button-background-active);*/ /*figure out how to fix colors to make it more obvious that the loading bar is moving*/
  background-image: linear-gradient(to right, var(--button-background-active) 0%, var(--button-background-active) 50%, var(--button-background-hover) 50%, var(--button-background-hover) 100%);
  background-size: 190% 100%;
  background-position: 100%; /* 100% -> 0% */
  animation: 0.25s confirmation linear forwards;
}

@keyframes confirmation {
	from {
		background-position: 100%;
	}
	to {
		background-position: 0%;
	}
}
/* Learn how to overlay an invisible div over the select-option button https://www.youtube.com/watch?v=By8w2gs7U_U */

#powerups .stat{
	margin-top: 8px;
	margin-right: 4px;
}

